Closed
Bug 1066934
Opened 11 years ago
Closed 11 years ago
FF32: Skinned scrollbars thumb disappear upon scrolling a page at specific zoom percentage (different between FF themes)
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
VERIFIED
FIXED
mozilla35
People
(Reporter: dolfvolkoff, Assigned: mstange)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
|
304.12 KB,
image/jpeg
|
Details | |
|
1.30 KB,
patch
|
roc
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
Sylvestre
:
approval-mozilla-release-
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0
Build ID: 20140911151253
Steps to reproduce:
1.In Firefox 32 apply a full theme with skinned scrollbars (for example: FT DeepDark).
2.Zoom a page to certain percentage. The percentage varies between themes, screen resolutions, and dpi settings.
For example: for FT DeepDark, 1920x1080, 125% dpi - the bug could be triggered at 150% zoom.
3.Scroll the page.
Actual results:
Scrollbar disappears upon scrolling
Expected results:
Scrollbar shouldn't disappear upon scrolling
| Reporter | ||
Updated•11 years ago
|
Severity: normal → major
Comment 1•11 years ago
|
||
I can reproduce on Windows7 Aero as well as Classic
STR
0. Maximized browser on standard monitor(1280x1024)
1. Install the full theme https://addons.mozilla.org/ja/firefox/addon/ft-deepdark/ and restart
2. Open https://addons.mozilla.org/ja/firefox/addon/ft-deepdark/ page
3. Zoom out (Ctrl + -)
4. Scroll down (Press down arrow key / Mouse wheel / Dragging thumb of scroll bar etc.)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•11 years ago
|
||
[Tracking Requested - why for this release]: Regression
Regression window(m-i)
Good:
https://hg.mozilla.org/integration/mozilla-inbound/rev/fb7aec714906
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140528033652
Bad:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a0586a5ec2da
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140528035352
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=fb7aec714906&tochange=a0586a5ec2da
Regressed by:
a0586a5ec2da Markus Stange — Bug 1009679 - Layerize the scrollbar thumb on desktop, too. r=roc
Blocks: 1009679
status-firefox32:
--- → affected
status-firefox33:
--- → affected
status-firefox34:
--- → affected
status-firefox35:
--- → affected
status-firefox-esr31:
--- → unaffected
tracking-firefox33:
--- → ?
tracking-firefox34:
--- → ?
tracking-firefox35:
--- → ?
Component: Untriaged → Graphics: Layers
Keywords: regression
Product: Firefox → Core
Updated•11 years ago
|
Summary: FF32: Skinned scrollbars disappear upon scrolling a page at specific zoom percentage (different between FF themes) → FF32: Skinned scrollbars thumb disappear upon scrolling a page at specific zoom percentage (different between FF themes)
| Assignee | ||
Comment 3•11 years ago
|
||
I can reproduce this in my Linux VM.
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Updated•11 years ago
|
| Assignee | ||
Comment 6•11 years ago
|
||
I don't really understand why this fixes it, but it's the right thing to do anyway.
Attachment #8490758 -
Flags: review?(roc)
| Assignee | ||
Comment 7•11 years ago
|
||
And the reason that this bug didn't hit native scrollbars is that native scrollbars don't zoom along with the page, and thus are less likely to have fractional coordinates.
There's bug 401213 about this discrepancy.
Comment 8•11 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #7)
> And the reason that this bug didn't hit native scrollbars is that native
> scrollbars don't zoom along with the page, and thus are less likely to have
> fractional coordinates.
> There's bug 401213 about this discrepancy.
There ought to be a way to lock the scrollbar width to desktop theme like native scrollbars regardless the non-native theme. This varying width and disappearing thumb are very annoying here with the shipped by default Modern theme:
Mozilla/5.0 (X11; Linux i686; rv:32.0) Gecko/20100101 SeaMonkey/2.29; Build ID: 20140904220119
OS: Windows 7 → All
Hardware: x86_64 → All
Attachment #8490758 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 10•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Comment 13•11 years ago
|
||
The patch seems small. If it's safe enough, would it make sense to consider uplifts, possibly up to beta 33, if applicable?
It's a long time to wait till 35 makes it to the release channel, and the annoyance to those affected by it is more than minor IMO.
| Reporter | ||
Comment 14•11 years ago
|
||
(In reply to Avi Halachmi (:avih) from comment #13)
> The patch seems small. If it's safe enough, would it make sense to consider
> uplifts, possibly up to beta 33, if applicable?
>
> It's a long time to wait till 35 makes it to the release channel, and the
> annoyance to those affected by it is more than minor IMO.
Totally agree. The sooner this patch gets into our browser, the sooner users would stop cursing =)
Comment 15•11 years ago
|
||
FWIW, I applied the patch to Firefox 32.02, compiled locally and it seems to fix the issue.
Here's a try push which should have the builds available soon for testing: https://tbpl.mozilla.org/?tree=Try&rev=a8b2473b33ff
| Assignee | ||
Comment 16•11 years ago
|
||
Comment on attachment 8490758 [details] [diff] [review]
patch
I'll let the drivers decide on which branches they want to take this patch.
Approval Request Comment
[Feature/regressing bug #]: regression from bug 1009679
[User impact if declined]: disappearing scrollbars
[Describe test coverage new/current, TBPL]: none, and it's hard to write a test for this bug
[Risks and why]: low, the patch is very conservative and restores as much of the pre-bug 1009679 behavior as possible
[String/UUID change made/needed]: none
Attachment #8490758 -
Flags: approval-mozilla-release?
Attachment #8490758 -
Flags: approval-mozilla-beta?
Attachment #8490758 -
Flags: approval-mozilla-aurora?
Comment 17•11 years ago
|
||
Comment on attachment 8490758 [details] [diff] [review]
patch
Happy to take it for 33 & 34.
It is way too late for 32.
Attachment #8490758 -
Flags: approval-mozilla-release?
Attachment #8490758 -
Flags: approval-mozilla-release-
Attachment #8490758 -
Flags: approval-mozilla-beta?
Attachment #8490758 -
Flags: approval-mozilla-beta+
Attachment #8490758 -
Flags: approval-mozilla-aurora?
Attachment #8490758 -
Flags: approval-mozilla-aurora+
Comment 18•11 years ago
|
||
Comment 19•11 years ago
|
||
Updated•11 years ago
|
Flags: qe-verify+
Comment 21•11 years ago
|
||
Fixed in Fx 33 beta 6, Aurora and Nightly builds.
Comment 22•11 years ago
|
||
(In reply to Aris from comment #21)
> Fixed in Fx 33 beta 6, Aurora and Nightly builds.
Aris sounds like you've verified this on all branches. Can you let us know on which Operating System this was?
Flags: needinfo?(aris-t2)
Comment 23•11 years ago
|
||
I have tested this on Win7x64 using my "NewScrollbars" add-on with todays Fx 33b6 and yesterdays Aurora/Nightly builds.
Flags: needinfo?(aris-t2)
Comment 24•11 years ago
|
||
Thanks for the info Aris! I've also been able to reproduce the original issue on Firefox 32.0.2, with steps from comment 1, on both Windows 7 x64 and Ubuntu 12.10 x86, and can confirm that the issue no longer shows on:
- Firefox 33 Beta 6 - BuildID=20140922173023
- latest Firefox 34 Aurora - BuildID=20140923004002
- latest Firefox 35 Nightly - BuildID=20140923030204
Status: RESOLVED → VERIFIED
| Assignee | ||
Comment 26•11 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #6)
> Created attachment 8490758 [details] [diff] [review]
> patch
>
> I don't really understand why this fixes it
Andrew is fixing the actual underlying bug in bug 1169370.
You need to log in
before you can comment on or make changes to this bug.
Description
•