Bug 1066934 - Don't allow the snapped scrollbar thumb to extend past the scrollbar bounds. r=roc